# boltz-dart

./: .gitignore  .metadata  CHANGELOG.md  README.md  analysis_options.yaml  codegen.sh  compile.all.sh  compile.android.sh  compile.ios.sh  compile.native.sh  compile.sh  ffigen.yaml  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: precompiled_binaries.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
assets/: release.config.txt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: AppDelegate.swift  Info.plist  NSBundleHelper.h  NSBundleHelper.m  Runner-Bridging-Header.h
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: boltz.dart  main.dart  menu.dart  wallet.dart
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
ios/: .gitignore  boltz_dart.podspec
ios/Classes/: bindings.h  frb_generated.h
ios/libboltz.xcframework/: Info.plist
lib/: boltz.dart  boltz_dart.dart  boltz_dart_bindings_generated.dart  bridge_definitions.dart  bridge_generated.dart  ffi.dart  http.dart  loader.dart  root.dart  zzboltz_dart.dart  zzboltz_dart_bindings_generated.dart  zzffi.dart
lib/src/: root.dart
lib/src/types/: supported_pair.dart  supported_pair.freezed.dart  supported_pair.g.dart  swap.dart  swap_status.dart  swap_status.freezed.dart  swap_status.g.dart  swap_status_response.dart  swap_status_response.freezed.dart  swap_status_response.g.dart
lib/src/utils/: http.dart  loader.dart  stream.dart
lib/types/: supported_pair.dart  swap.dart  swap_status_response.dart  swap_status_response.g.dart
libboltz.0.1.6/libboltz.xcframework/: Info.plist
macos/: boltz_dart.podspec
macos/Classes/: bindings.h  boltz_dart.c  frb_generated.h
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  Dockerfile  README.md  android.sh  build.rs  build.sh  cargokit.yaml  compress.sh  copy.sh  darwin.sh  docker-entrypoint.sh  linux.sh  makefile  unit-test.sh  unittest.sh
rust/boltz-dart.xcodeproj/: project.pbxproj
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  btc_ln.rs  frb_generated.io.rs  frb_generated.rs  frb_generated.web.rs  lib.rs  preimage.rs  secrets.rs  types.rs  util.rs
rust/src/api/: btc_ln.rs  chain_swap.rs  error.rs  fees.rs  lbtc_ln.rs  lnurl.rs  mod.rs  types.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_boltz_dart.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_boltz_dart.podspec
rust_builder/windows/: CMakeLists.txt
src/: CMakeLists.txt  boltz_dart.c
test/: boltz_bdk_test.dart  boltz_classes_test.dart  boltz_new_test.dart  boltz_standalone_test.dart  boltz_static_test.dart  boltz_test.dart  chain_swap_test.dart  http_test.dart  libboltz_dart.dylib  test_data.dart
(+2 files in other folders)
