[package]
name = "boltz_dart"
authors = [
    "i5hi <ishi@satoshiportal.com>, mocodesmo <morteza@satoshiportal.com>",
]
version = "0.1.6"
edition = "2021"

[lib]
name = "boltz_dart"
doctest = false
crate-type = ["staticlib", "cdylib"]

[dependencies]
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust.git", rev = "8c903e196fed7416893096f37ff2a7e620b2a8e7" }
flutter_rust_bridge = "=2.0.0-dev.31"
anyhow = "1.0.68"
serde = "1.0.89"
serde_json = "1.0.96"
openssl = { version = "0.10.64", features = ["vendored"] }
hex = "0.4"

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/BlockstreamResearch/rust-secp256k1-zkp.git", rev = "60e631c24588a0c9e271badd61959294848c665d" }

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.0.0-dev.31" }

[build]
profiler = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
