[package]
name = "boltz"
authors = [
    "i5hi <ishi@satoshiportal.com>, mocodesmo <morteza@satoshiportal.com>",
]
version = "0.1.6"
edition = "2021"

[lib]
name = "boltz"
doctest = false
crate-type = ["staticlib", "cdylib"]

[dependencies]
boltz-client = { git = "https://github.com/SatoshiPortal/boltz-rust.git", features = ["lnurl"] }
flutter_rust_bridge = "=2.0.0"
anyhow = "1.0.68"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
openssl = { version = "0.10.64", features = ["vendored"] }
hex = "0.4"

[patch.crates-io]
secp256k1-zkp = { git = "https://github.com/dangeross/rust-secp256k1-zkp.git", rev = "57d29b15269ca2ce3c3b118b6a72b66c1169e7b1" }

[build-dependencies]
flutter_rust_bridge_codegen = { version = "=2.0.0" }

[build]
profiler = true

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[target.'cfg(target_os = "macos")']
rustflags = [
    "-C", "link-arg=-undefined",
    "-C", "link-arg=dynamic_lookup",
]
